assets/css/style.css
@font-face {
    font-family: "Montserrat";
    src: url("../fonts/Montserrat-SemiBold.ttf");
    font-weight: normal;
    font-style: normal;
}

/* -webkit- add this if error */
@keyframes autofill {
    to {
        color: #110133;
        opacity: 0.7;
        background: transparent;
    }
}

* {
    margin: 0;
    padding: 0;
    border: 0;
    font-size: 100%;
    box-sizing: border-box;
    font-family: "Montserrat";
}

body {
    background-color: #110133;
    overflow: hidden;
}


.img-etu {
    width: 100%;
    height: auto;
    margin-top: -70px;
    margin-right: -70px;
}

.logo-img {
    margin-top: 50px;
    width: 100%;
    height: auto;
    max-width: 150px;
}

.logo-txt {
    margin-top: 50px;
    width: 100%;
    height: auto;
    max-width: 350px;
}

.desc {
    color: white;
    font-weight: normal;
    font-size: 30px;
    margin-top: 50px;
    margin-bottom: 50px;
}

.input {
    width: 85%;
    height: 50px;
    display: inline-block;
    border: 0;
    border-radius: 32px;
    -webkit-border-radius: 32px;
    -moz-border-radius: 32px;
    -ms-border-radius: 32px;
    -o-border-radius: 32px;
    box-sizing: border-box;
    resize: none;
    background-color: transparent;
    font-size: 24px;
    user-select: none;
    outline: none;
    -moz-appearance: textfield;

}

.input::-webkit-outer-spin-button,
.input::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}

.input:-webkit-autofill,
.input:-webkit-autofill:hover,
.input:-webkit-autofill:focus,
.input:-webkit-autofill:active {
    -webkit-animation-name: autofill;
    -webkit-animation-fill-mode: both;
    animation-name: autofill;
    animation-fill-mode: both;
}

.out {
    display: flex;
    justify-content: space-between;
    margin: 8px 0;
    padding: 0 20px;
    width: 25vw;
    background-color: white;
}

input::placeholder {
    color: #110133;
    opacity: 0.5;
    font-size: 24px;
}

#submitForm {
    height: 100%;
    opacity: 0.5;
    cursor: pointer;
    background-color: transparent;
    transition: opacity 0.2s;
}

#submitForm:focus {
    outline: none;
    opacity: 0.8;
}

.sponso {
    color: white;
    margin-top: 5vh;
    font-size: 13px;
}

#showMessage {
    font-size: 24px;
    margin-top: 10px;
}

@media screen and (max-width: 1536px) {
    .desc {
        font-size: 24px;
    }

    input::placeholder {
        font-size: 18px;
    }

    .logo-img {
        max-width: 100px;
    }
}

@media screen and (max-width: 1144px) {
    .out {
        width: 290px;
    }
}

@media screen and (max-width: 991px) {
    form {
        margin-bottom: 100px;
    }

    .img-etu {
        max-width: 80%;
    }

    p {
        padding: 20px;
    }
}

@media screen and (max-width: 574px) {
    form {
        margin-bottom: 0;
    }

    .logo-img {
        max-width: 20%;
    }

    .logo-txt {
        max-width: 70%;
    }

    p {
        padding: 0 20px;
    }
}

